force-app/main/default/objects/OI_Metadata_Type_Config__mdt/OI_Metadata_Type_Config__mdt.object-meta.xml
<CustomObject>
    <label>OI Metadata Type Config</label>
    <pluralLabel>OI Metadata Type Configs</pluralLabel>
    <description>The Scanner Registry — drives the Metadata Scanner's Strategy registry (DataModel.md §4.2, MetadataScanner.md §7). Deliberately distinct from the Domain Type Registry (OI_Node_Type_Descriptor__mdt/OI_Edge_Type_Descriptor__mdt). No records are shipped in this sprint — populated when concrete OI_*Scanner classes are built (Roadmap Phase 1).</description>
</CustomObject>