force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Metadata_Type_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type_Api_Name__c</fullName>
    <label>Metadata Type Api Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>e.g. Flow — a componentKind value in MetadataScanner.md §5 terms.</description>
</CustomField>