force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Min_Rescan_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Min_Rescan_Interval_Minutes__c</fullName>
    <label>Min Rescan Interval Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>