force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Preferred_Api__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Api__c</fullName>
    <label>Preferred Api</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Describe</fullName><default>true</default><label>Describe</label></value>
            <value><fullName>UI</fullName><default>false</default><label>UI</label></value>
            <value><fullName>Tooling</fullName><default>false</default><label>Tooling</label></value>
            <value><fullName>Metadata</fullName><default>false</default><label>Metadata</label></value>
            <value><fullName>REST</fullName><default>false</default><label>REST</label></value>
            <value><fullName>SOQL</fullName><default>false</default><label>SOQL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>