force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>