force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Retry_Attempt_Cap__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt_Cap__c</fullName>
    <label>Retry Attempt Cap</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>