force-app/main/default/objects/OI_Metadata_Type_Config__mdt/fields/Scanner_Class__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Class__c</fullName>
    <label>Scanner Class</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Fully-qualified OI_IMetadataScanner implementation, resolved via Type.forName.</description>
</CustomField>